src/test/test-models/bad/err-decl-no-expression.stan
data {
  real<lower=> y;
}
model {
}
